fixed time/deadline collapse

--- a/app/components/content/form-view/form-components/components.styl
+++ b/app/components/content/form-view/form-components/components.styl
@@ -21,6 +21,15 @@
   .form-aligned-col2
     flex-grow 2
     width 100%
+    flexbox(flex)
+    flex-direction(row)
+    justify-content(space-between)
+
+  .form-aligned-col2-check
+    width 10%
+
+  .form-aligned-col2-text
+    width 90%
 
 .form-title-container
   width 100%
